Sync LeetCode submission Runtime - 1 ms (98.61%), Memory - 42.6 MB (78.07%)